<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cnameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorValue"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/cNameForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cNameForm_value"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorValue"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/emailForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailForm_value"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/phoneError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorValue"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/phoneNumberForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phoneNumberForm_value"
                android:inputType="phone" />

            <TextView
                android:id="@+id/productListError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorValue"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/productListForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/productListForm_value" />

            <TextView
                android:id="@+id/productQtyError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorValue"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/productNumberForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/productNumberForm_value"
                android:inputType="number" />

            <Button
                android:id="@+id/submitButtonForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitButton"
                android:text="@string/submitButton_words" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>